Feature /mvn-flux -initialize-backend Cuando se genera con mvn-flux -initialize-backend,e intento ingresar a swagger-ui y hago la petición curl -X 'GET' \   'http://localhost:9050/autentification/auth?username=admin&password=admin' \   -H 'accept: */*'
devuelve 


Code	Details
200	
Response body
Unrecognized response type; displaying content as text.

Download
JettraServer is running!
Response headers
 content-length: 24 
 content-security-policy: default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://unpkg.com https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.jsdelivr.net https://unpkg.com https://cdnjs.cloudflare.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; media-src 'self' blob: data: mediastream:; connect-src 'self' ws: wss:; 
 date: Thu,20 Aug 2026 13:44:33 GMT 
 referrer-policy: strict-origin-when-cross-origin 
 x-content-type-options: nosniff 
 x-frame-options: DENY 
 x-xss-protection: 1; mode=block


No está devolviendo el JWTToken puedes corregir el error.